<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.createteam.CreateTeamFragment"
    android:theme="@style/tournament_mode_theme"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:backgroundTint="@color/tournament_mode_primary_color">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Create a team"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?homeAsUpIndicator"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teamNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_name_hint"
                android:layout_marginTop="@dimen/_10sdp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTeamName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teamDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/challenge_description"
                android:layout_marginTop="@dimen/create_challenge_input_fields_margin"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teamNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTeamDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:gravity="top|start"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/infoTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_team_info"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/create_challenge_input_fields_margin"
                app:layout_constraintTop_toBottomOf="@id/teamDescriptionLayout"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createTeamButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/create"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTV"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>